# Holoster

./: .gitignore  README.md  conductor-config-agent_1.toml  conductor-config-agent_2.toml  conductor-config.toml  key1.keystore  key2.keystore  package-lock.json  package.json
dna-src/test/: index.js  package-lock.json
dna-src/zomes/holoster/: zome.json
dna-src/zomes/holoster/code/: .hcbuild  Cargo.toml
dna-src/zomes/holoster/code/src/: lib.rs  utils.rs
dna-src/zomes/holoster/code/src/anchor/: mod.rs
dna-src/zomes/holoster/code/src/comment/: handlers.rs  mod.rs
dna-src/zomes/holoster/code/src/member/: handlers.rs  mod.rs
dna-src/zomes/holoster/code/src/post/: handlers.rs  mod.rs
dna-src/zomes/holoster/code/src/vote/: handlers.rs  mod.rs
docs/: README.md  comment.md  post.md  user.md  vote.md
ui-src/: README.md  angular.json  package-lock.json  package.json
ui-src/e2e/src/: app.e2e-spec.ts
ui-src/src/: index.html  karma.conf.js  styles.css
ui-src/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  data.service.ts
ui-src/src/app/Classes/: Comment.ts  Post.ts  Result.ts  User.ts  Vote.ts
ui-src/src/app/MyProfile/: MyProfile.component.css  MyProfile.component.html  MyProfile.component.ts
ui-src/src/app/UserProfile/: UserProfile.component.css  UserProfile.component.ts
ui-src/src/app/followers-list/: followers-list.component.html  followers-list.component.spec.ts  followers-list.component.ts
ui-src/src/app/following-list/: following-list.component.css  (+2 more)
(+20 files in other folders)
